--- a/_site.yml
+++ b/_site.yml
@@ -9,6 +9,8 @@ navbar:
     href: RMIT-Statistical-Data-Analysis.html 
   - text: "RMIT - Stats and probability with R"
     href: RMIT-Stats-and-probability-with-R.html
+  - text: "Shiny app - Tolling Customer Ombudsman"
+    href: shiny_tco_app.html
 output:
   html_document:
     theme: cosmo
