--- a/_site.yml
+++ b/_site.yml
@@ -10,7 +10,7 @@ navbar:
   - text: "RMIT - Stats and probability with R"
     href: RMIT-Stats-and-probability-with-R.html
   - text: "Shiny app - Tolling Customer Ombudsman"
-    href: shiny_tco_app.html
+    href: shiny-tco-app.html
 output:
   html_document:
     theme: cosmo
