--- a/_site.yml
+++ b/_site.yml
@@ -10,7 +10,7 @@ navbar:
     href: RMIT-Stats-and-probability-with-R.html
   - text: "Shiny app - Tolling Customer Ombudsman"
     href: shiny-tco-app.html
-  - test: "RMIT - A/B testing"
+  - text: "RMIT - A/B testing"
     href: RMIT-AB-testing.html
 output:
   html_document:
